--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -12,6 +12,11 @@ body {
 
 }
 
+/* footer */
+.conffuter {
+    background-color: gray;
+}
+
 
 /*CSS code for index.php, signup.php, admin.php*/
 
